--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#C438A3EB</color>
     <color name="colorAccent">#E7C856</color>
     <color name="btnBackground">#00ffffff</color>
-    <color name="card_background">#fafafa</color>
+    <color name="card_background">#FAFAFA</color>
     <color name="text_profile">#EBAAA8A8</color>
+    <color name="white">#FFFFFF</color>
 </resources>
