--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,64 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_8dp" android:id="@+id/cardView">
-    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:tools="http://schemas.android.com/tools" xmlns:bind="http://schemas.android.com/apk/res-auto">
+    <!--Variables -->
+    <data>
+        <import type="android.view.View"/>
+        <variable name="user" type="com.simplekjl.tddkt.data.models.User"/>
+    </data>
+    <androidx.cardview.widget.CardView
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
+            android:id="@+id/cardView">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@mipmap/ic_launcher"
-                app:civ_border_color="#EEEEEE"
-                app:civ_border_width="1dp"
-                app:civ_shadow="true"
-                app:civ_shadow_radius="4"
-                app:civ_shadow_color="#8BC34A"
-                app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/user_profile_photo"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.503"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/comment_username"
-                app:layout_constraintStart_toEndOf="@+id/user_profile_photo" android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp" tools:text="Jose Luis Crisostomo" android:fontFamily="@font/roboto"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/comment_user_email" tools:text="jl.cs606@gmail.com"
-                app:layout_constraintStart_toStartOf="@+id/comment_username"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/comment_username"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
-                android:ellipsize="end"/>
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/comment_body"
-                app:layout_constraintTop_toBottomOf="@+id/comment_user_email"
-                tools:text="simplekjl"
-                app:layout_constraintEnd_toEndOf="@+id/comment_user_email"
-                app:layout_constraintStart_toStartOf="@+id/comment_user_email"
-                android:layout_marginTop="16dp" android:fontFamily="@font/roboto" android:maxLines="3"
-                android:ellipsize="end"
-        />
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/more_details"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/comment_body"
-                app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
-                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="12sp"
-                android:text="@string/more_details" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+            <com.mikhaellopez.circularimageview.CircularImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@mipmap/ic_launcher"
+                    app:civ_border_color="#EEEEEE"
+                    app:civ_border_width="1dp"
+                    app:civ_shadow="true"
+                    app:civ_shadow_radius="4"
+                    app:civ_shadow_color="#8BC34A"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/user_profile_photo"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.503"
+                    bind:imageUrl="@{@string/urlImage}"
+                    bind:errorImage="@{@drawable/ic_user_regular}"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/comment_username"
+                    android:text="@{user.username}"
+                    app:layout_constraintStart_toEndOf="@+id/user_profile_photo"
+                    android:layout_marginStart="16dp" tools:text="Jose Luis Crisostomo"
+                    android:fontFamily="@font/roboto"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{user.email}"
+                    android:id="@+id/comment_user_email" tools:text="jl.cs606@gmail.com"
+                    app:layout_constraintStart_toStartOf="@+id/comment_username"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/comment_username"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
+                    android:ellipsize="end"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/comment_body"
+                    app:layout_constraintTop_toBottomOf="@+id/comment_user_email"
+                    tools:text="simplekjl"
+                    android:text="@{user.username}"
+                    app:layout_constraintEnd_toEndOf="@+id/comment_user_email"
+                    app:layout_constraintStart_toStartOf="@+id/comment_user_email"
+                    android:layout_marginTop="16dp" android:fontFamily="@font/roboto" android:maxLines="3"
+                    android:ellipsize="end"
+            />
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/more_details"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/comment_body"
+                    app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
+                    style="@style/Widget.AppCompat.Button.Borderless" android:textSize="12sp"
+                    android:text="@string/more_details"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
