--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_8dp" android:id="@+id/comment_card">
+        android:layout_margin="@dimen/margin_4dp" android:id="@+id/comment_card">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,7 +22,6 @@
                 app:civ_shadow_radius="4"
                 app:civ_shadow_color="#8BC34A"
                 android:id="@+id/comment_profile_photo"
-                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="@+id/comment_body"
@@ -44,10 +43,10 @@
                 tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
                 android:fontFamily="@font/roboto"
                 android:ellipsize="end"
-                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/comment_card"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
