--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -6,7 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="@dimen/custom_height_card"
-        android:layout_margin="@dimen/margin_8dp">
+        android:layout_margin="@dimen/margin_4dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,7 +37,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/post_title" tools:text="Post title"
-                app:layout_constraintStart_toStartOf="@+id/post_username"
+                app:layout_constraintStart_toStartOf="@+id/post_profile_photo"
                 android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/post_username"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:fontFamily="@font/roboto" android:maxLines="1"
