--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -11,7 +11,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_8dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:id="@+id/cardView">
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -40,7 +40,7 @@
                     android:text="@{user.username}"
                     app:layout_constraintStart_toEndOf="@+id/user_profile_photo"
                     android:layout_marginStart="16dp" tools:text="Jose Luis Crisostomo"
-                    android:fontFamily="@font/roboto"
+                    android:fontFamily="@font/roboto_medium"
                     android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
             <TextView
@@ -49,9 +49,9 @@
                     android:text="@{user.email}"
                     android:id="@+id/comment_user_email" tools:text="jl.cs606@gmail.com"
                     app:layout_constraintStart_toStartOf="@+id/comment_username"
-                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/comment_username"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/comment_username"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
+                    android:fontFamily="@font/roboto" android:maxLines="1"
                     android:ellipsize="end"/>
             <TextView
                     android:layout_width="0dp"
@@ -62,7 +62,7 @@
                     android:text="@{user.username}"
                     app:layout_constraintEnd_toEndOf="@+id/comment_user_email"
                     app:layout_constraintStart_toStartOf="@+id/comment_user_email"
-                    android:layout_marginTop="16dp" android:fontFamily="@font/roboto" android:maxLines="3"
+                    android:layout_marginTop="8dp" android:fontFamily="@font/roboto" android:maxLines="3"
                     android:ellipsize="end"
             />
             <Button
