--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="custom_height_card">200dp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
 </resources>
