--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent" android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-
-    <!--<FrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:id="@+id/fragment" android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
-        <!--android:layout_marginEnd="8dp" android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginStart="8dp" android:layout_marginBottom="8dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
-
-
-    <FrameLayout
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragment" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bottom_navigation"
+    />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:backgroundTint="@color/colorPrimary"
+            app:itemIconTint="@drawable/bottom_nav_icon_selector"
+            app:itemTextColor="@drawable/bottom_nav_icon_selector"
+            app:menu="@menu/bottom_nav_menu"
+    />
+
+
+</RelativeLayout>
