--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -50,7 +50,7 @@
                     android:id="@+id/comment_user_email" tools:text="jl.cs606@gmail.com"
                     app:layout_constraintStart_toStartOf="@+id/comment_username"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/comment_username"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                     android:fontFamily="@font/roboto" android:maxLines="1"
                     android:ellipsize="end"/>
             <TextView
@@ -66,14 +66,14 @@
                     android:ellipsize="end"
             />
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="121dp"
+                    android:layout_height="34dp"
                     android:id="@+id/more_details"
-                    android:layout_marginBottom="16dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/comment_body"
+                    app:layout_constraintEnd_toEndOf="@+id/comment_body"
                     app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
                     style="@style/Widget.AppCompat.Button.Borderless" android:textSize="12sp"
-                    android:text="@string/more_details"/>
+                    android:text="@string/more_details" android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
